--- a/Ubiquitous2/View/ChatMessageView.xaml
+++ b/Ubiquitous2/View/ChatMessageView.xaml
@@ -3,6 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:Custom="http://www.galasoft.ch/mvvmlight"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              mc:Ignorable="d" 
              UseLayoutRounding="True"             
              Focusable="False"
@@ -11,5 +13,12 @@
              TextOptions.TextFormattingMode="Ideal"
              DataContext="{Binding Path=ChatMessage, Source={StaticResource Locator}}"
              d:DesignHeight="89" d:DesignWidth="300" Style="{DynamicResource ChatMessageTemplate}" >
+
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <Custom:EventToCommand Command="{Binding SetExpiration}"/>
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
+
 
 </UserControl>
