--- a/Ubiquitous2/View/DashBoardWindow.xaml
+++ b/Ubiquitous2/View/DashBoardWindow.xaml
@@ -19,7 +19,7 @@
     <Window.Resources>
         <Style x:Key="containerStyle" TargetType="Border">
             <Setter Property="BorderBrush" Value="#FF117DBB"/>
-            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="BorderThickness" Value="0"/>
         </Style>
         <Style TargetType="{x:Type Line}" x:Key="crossLineStyle">
             <Setter Property="Stroke" Value="#33D9EAFF"/>
@@ -31,7 +31,7 @@
         <Interactivity:UnclosableWindow/>
     </i:Interaction.Behaviors>
 
-    <fluent:BackstageTabControl SelectedIndex="1" Background="#FF323232" Style="{DynamicResource SettingsStyle}" ItemsPanelBackground="#FF3F3F46" Foreground="White">
+    <fluent:BackstageTabControl SelectedIndex="1" Background="#FF323232" Style="{DynamicResource SettingsStyle}" ItemsPanelBackground="#FF3F3F46">
         <fluent:BackstageTabItem Header="Stream topic">
             <Grid>
                 <Grid.Background>
@@ -84,12 +84,24 @@
             </Grid>
 
         </fluent:BackstageTabItem>
-        <fluent:BackstageTabItem Header="Analytics" Foreground="Black">
-            <Grid Background="White">
+        <fluent:BackstageTabItem Header="Analytics" Foreground="Black" Background="#FF323232">
+            <Grid>
+                <Grid.Background>
+                    <LinearGradientBrush EndPoint="0.6,1" StartPoint="1,0">
+                        <GradientStop Color="#FF3C3C3C" Offset="0"/>
+                        <GradientStop Color="White" Offset="1"/>
+                    </LinearGradientBrush>
+                </Grid.Background>
                 <StackPanel Orientation="Vertical">
-                    <TextBlock FontSize="24" TextAlignment="Center" Margin="0,15,0,0">Maximum total viewers</TextBlock>
-                    <Border Margin="15" VerticalAlignment="Top" Height="200" BorderThickness="1" BorderBrush="Black">
-                        <sparrow:SparrowChart RenderingMode="WritableBitmap" Margin="0" ContainerBorderStyle="{StaticResource containerStyle}" Background="#E0073540" Foreground="#FFDADADA" FontSize="16" Padding="15">
+                    <TextBlock FontSize="24" TextAlignment="Center" Margin="0,15,0,0" Background="#FF3F3F46" Foreground="#FFFFB71D">
+                        <TextBlock.Effect>
+                            <DropShadowEffect ShadowDepth="0" BlurRadius="20"/>
+                        </TextBlock.Effect>Maximum total viewers</TextBlock>
+                    <Border Margin="15" VerticalAlignment="Top" Height="200" BorderThickness="1" BorderBrush="Black" Padding="0,11,9,10" HorizontalAlignment="Left" Background="#FF063039">
+                        <sparrow:SparrowChart RenderingMode="WritableBitmap" Margin="0" ContainerBorderStyle="{StaticResource containerStyle}" Foreground="#FFDADADA" FontSize="16" Padding="15">
+                            <sparrow:SparrowChart.Effect>
+                                <DropShadowEffect ShadowDepth="0" BlurRadius="9" Color="#FFA8A8A8"/>
+                            </sparrow:SparrowChart.Effect>
                             <sparrow:SparrowChart.XAxis>
                                 <sparrow:DateTimeXAxis Visibility="Collapsed" ZoomCoefficient="0.05" ZoomOffset="0.5" Interval="0:30:0" StringFormat="MMM dd HH:mm"/>
                             </sparrow:SparrowChart.XAxis>
