--- a/Ubiquitous2/Skins/Shared/ScrollViewerSkin.xaml
+++ b/Ubiquitous2/Skins/Shared/ScrollViewerSkin.xaml
@@ -92,7 +92,7 @@
 
     
     <ContextMenu x:Key="VScrollBarContextMenu" x:Shared="true">
-        <MenuItem IsCheckable="True" Header="Force autoscroll" Command="{Binding ForceAutoScroll}" CommandParameter="{Binding IsChecked, RelativeSource={RelativeSource Self}}" CommandTarget="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type UserControl}}}"/>
+        <MenuItem IsCheckable="True" IsChecked="{Binding Path=AppConfig.ForceAutoScroll, Mode=TwoWay}" Header="Force autoscroll" Command="{Binding ForceAutoScroll}" CommandParameter="{Binding IsChecked, RelativeSource={RelativeSource Self}}" CommandTarget="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type UserControl}}}"/>
     </ContextMenu>
 
     <ControlTemplate x:Key="VerticalScrollBar" TargetType="{x:Type ScrollBar}">
